--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         </div>
                         <div id="collapse5_5" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_5">
                             <div class="panel-body">
-                                <p class="mbr-fonts-style panel-text display-4">Все вопросы и предложения, касающиеся работы сервиса ДОНАТЕ ГРАМ, вы можете направлять в службу поддержки по адресу: <a href="mailto:support@donategram.ru" class="text-primary">support@donategram.ru</a>.<br><br>Чтобы сообщить об ошибке в работе сервиса ДОНАТЕ ГРАМ, воспользуйтесь онлайн-формой. При заполнении убедитесь, что адрес электронной почты указан правильно, так как в противном случае мы не сможем с вами связаться.<br><br>Желаем вам успешных донатов!</p>
+                                <p class="mbr-fonts-style panel-text display-4">Все вопросы и предложения, касающиеся работы сервиса ДОНАТЕ ГРАМ, вы можете направлять в службу поддержки по адресу: <a href="mailto:help@donategram.ru" class="text-primary">help@donategram.ru</a>.<br><br>Чтобы сообщить об ошибке в работе сервиса ДОНАТЕ ГРАМ, воспользуйтесь онлайн-формой. При заполнении убедитесь, что адрес электронной почты указан правильно, так как в противном случае мы не сможем с вами связаться.<br><br>Желаем вам успешных донатов!</p>
                             </div>
                         </div>
                     </div>
@@ -368,7 +368,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">Дисклеймер</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">ДОНАТЕ ГРАМ не осуществляет прием платежей физических лиц в пользу российских юридических лиц, индивидуальных предпринимателей, иностранных лиц, информация о которых включена в перечень лиц, в пользу которых запрещены переводы денежных средств.<br><br>Служба поддержки: <a href="mailto:support@donategram.ru" class="text-primary">support@donategram.ru</a><a href="mailto:support@donategram.ru" class="text-primary"><br></a><br><!--ИНН:&nbsp;<div>ОГРНИП:<br><br>--><a href="terms-of-service.html" class="text-primary">Условия использования сайта</a> - <a href="privacy-policy.html" class="text-primary">Политика конфиденциальности</a></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">ДОНАТЕ ГРАМ не осуществляет прием платежей физических лиц в пользу российских юридических лиц, индивидуальных предпринимателей, иностранных лиц, информация о которых включена в перечень лиц, в пользу которых запрещены переводы денежных средств.<br><br>Служба поддержки: <a href="mailto:help@donategram.ru" class="text-primary">help@donategram.ru</a><a href="mailto:help@donategram.ru" class="text-primary"><br></a><br><!--ИНН:&nbsp;<div>ОГРНИП:<br><br>--><a href="terms-of-service.html" class="text-primary">Условия использования сайта</a> - <a href="privacy-policy.html" class="text-primary">Политика конфиденциальности</a></h4>
                 
             </div>
         </div>
