--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -102,7 +102,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2">Дисклеймер</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">ДОНАТЕ ГРАМ не осуществляет прием платежей физических лиц в пользу российских юридических лиц, индивидуальных предпринимателей, иностранных лиц, информация о которых включена в перечень лиц, в пользу которых запрещены переводы денежных средств.<br><br>Служба поддержки: <a href="mailto:support@donategram.ru" class="text-primary">support@donategram.ru</a><a href="mailto:support@donategram.ru" class="text-primary"><br></a><br><!--ИНН:&nbsp;<div>ОГРНИП:<br><br>--><a href="terms-of-service.html" class="text-primary">Условия использования сайта</a> - <a href="privacy-policy.html" class="text-primary">Политика конфиденциальности</a></div></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-7">ДОНАТЕ ГРАМ не осуществляет прием платежей физических лиц в пользу российских юридических лиц, индивидуальных предпринимателей, иностранных лиц, информация о которых включена в перечень лиц, в пользу которых запрещены переводы денежных средств.<br><br>Служба поддержки: <a href="mailto:help@donategram.ru" class="text-primary">help@donategram.ru</a><a href="mailto:help@donategram.ru" class="text-primary"><br></a><br><!--ИНН:&nbsp;<div>ОГРНИП:<br><br>--><a href="terms-of-service.html" class="text-primary">Условия использования сайта</a> - <a href="privacy-policy.html" class="text-primary">Политика конфиденциальности</a></div></h4>
                 
             </div>
         </div>
